updated the JS comment

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,7 +8,12 @@
   margin-top: 20px;
 }
 
-img{
+/* img{
     width: 25%;
     height: auto;
+} */
+
+#resize {
+    max-width: 1000px;
+    max-height: 1000px;
 }
