--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,6 +4,12 @@
   width: 650px;
 }
 
+#comment-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 650px;
+}
+
 #song-container {
   margin-top: 20px;
 }
