--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -3,7 +3,11 @@
   margin-right: auto;
   width: 650px;
 }
-
+#comm-form{
+  margin-left: auto;
+  margin-right: auto;
+  width: 650px;
+}
 #comment-container {
   margin-left: auto;
   margin-right: auto;
